--- a/project/src/public/index.html
+++ b/project/src/public/index.html
@@ -1,20 +1,95 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<!--
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		<title>Hyperspace by HTML5 UP</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
+		<!-- Sidebar -->
+			<section id="sidebar">
+				<div class="inner">
+					<nav>
+						<ul>
+							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#one">Curiosity</a></li>
+							<li><a href="#two">Opportunity</a></li>
+							<li><a href="#three">Spirit</a></li>
+						</ul>
+					</nav>
+				</div>
+			</section>
 
-<body>
-    <main>
-        <div id="root">
-            <h1>Loading...</h1>
-        </div>
-    </main>
-</body>
-<script src="/client.js"></script>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
+				<!-- Intro -->
+					<section id="intro" class="wrapper style1 fullscreen fade-up">
+						<div class="inner">
+              <div id="root">
+                <h1>Loading...<h1>
+              </div>
+						</div>
+					</section>
+
+				<!-- One -->
+					<section id="one" class="wrapper style2 fullscreen fade-up">
+						 <div class="inner">
+                <div id="curiosity">
+                  <h1>Loading Curiosity...</h1>
+                  <p>This is the Curiosity Rover screen</p>
+								</div>
+						</div>
+					</section>
+
+
+				<!-- Two -->
+					<section id="two" class="wrapper style2 fullscreen fade-up">
+					  <div class="inner">
+              <div id="opportunity">
+                    <h1>Loading Opportunity...</h1>
+                    <p>This is the Opportunity Rover screen</p>
+              </div>
+					 </div>
+					</section>
+
+				<!-- Three -->
+					<section id="three" class="wrapper style2 fullscreen fade-up">
+	   			  <div class="inner">
+              <div id="spirit">
+                    <h1>Loading Spirit...</h1>
+                    <p>This is the Spirit Rover screen</p>
+              </div>
+						</div>
+					</section>
+
+			</div>
+
+		<!-- Footer -->
+			<footer id="footer" class="wrapper style1-alt">
+				<div class="inner">
+					<ul class="menu">
+						<li>&copy; Roselabs 2020. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+			<script src="/client.js"></script>
+	</body>
 </html>
