Update: Revised UI with portfolio gallery for images

--- a/project/src/public/index.html
+++ b/project/src/public/index.html
@@ -43,7 +43,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 fullscreen fade-up">
 						 <div class="inner">
-                <div id="curiosity">
+                <div id="Curiosity">
                   <h1>Loading Curiosity...</h1>
                   <p>This is the Curiosity Rover screen</p>
 								</div>
@@ -54,7 +54,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style2 fullscreen fade-up">
 					  <div class="inner">
-              <div id="opportunity">
+              <div id="Opportunity">
                     <h1>Loading Opportunity...</h1>
                     <p>This is the Opportunity Rover screen</p>
               </div>
@@ -64,7 +64,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style2 fullscreen fade-up">
 	   			  <div class="inner">
-              <div id="spirit">
+              <div id="Spirit">
                     <h1>Loading Spirit...</h1>
                     <p>This is the Spirit Rover screen</p>
               </div>
