--- a/project/src/public/index.html
+++ b/project/src/public/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>Mars Rover Dashboard - Udacity Nanodegree</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -35,7 +35,8 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
               <div id="root">
-                <h1>Loading...<h1>
+                <h1>Loadingi Apod...<h1>
+                  <p>This is the Apod screen</p>
               </div>
 						</div>
 					</section>
