Review feedback: Use Manifest API, use API Parameter, Update Mobile interface

--- a/project/src/public/index.html
+++ b/project/src/public/index.html
@@ -32,42 +32,42 @@
 			<div id="wrapper">
 
 				<!-- Intro -->
-					<section id="intro" class="wrapper style1 fullscreen fade-up">
+					<section id="intro" class="wrapper style1 fade-up">
 						<div class="inner">
               <div id="root">
-                <h1>Loadingi Apod...<h1>
+                <h1>Loading Apod...<h1>
                   <p>This is the Apod screen</p>
               </div>
 						</div>
 					</section>
 
 				<!-- One -->
-					<section id="one" class="wrapper style2 fullscreen fade-up">
+					<section id="one" class="wrapper style2 fade-up">
 						 <div class="inner">
                 <div id="Curiosity">
-                  <h1>Loading Curiosity...</h1>
-                  <p>This is the Curiosity Rover screen</p>
+                  <p>Press the button to load Curiosity information</p>
+                  <input type="submit" value="Load" id="btnCuriosity">
 								</div>
 						</div>
 					</section>
 
 
 				<!-- Two -->
-					<section id="two" class="wrapper style2 fullscreen fade-up">
+					<section id="two" class="wrapper style2 fade-up">
 					  <div class="inner">
               <div id="Opportunity">
-                    <h1>Loading Opportunity...</h1>
-                    <p>This is the Opportunity Rover screen</p>
+                    <p>Press the button to load Opportunity information</p>
+                    <input type="submit" value="Load" id="btnOpportunity">
               </div>
 					 </div>
 					</section>
 
 				<!-- Three -->
-					<section id="three" class="wrapper style2 fullscreen fade-up">
+					<section id="three" class="wrapper style2 fade-up">
 	   			  <div class="inner">
               <div id="Spirit">
-                    <h1>Loading Spirit...</h1>
-                    <p>This is the Spirit Rover screen</p>
+                    <p>Press the button to load Opportunity information</p>
+                  <input type="submit" value="Load" id="btnSpirit">
               </div>
 						</div>
 					</section>
