--- a/project/src/public/index.html
+++ b/project/src/public/index.html
@@ -35,8 +35,7 @@
 					<section id="intro" class="wrapper style1 fade-up">
 						<div class="inner">
               <div id="root">
-                <h1>Loading Apod...<h1>
-                  <p>This is the Apod screen</p>
+                <h1>Please wait while we load the Apod data...<h1>
               </div>
 						</div>
 					</section>
@@ -44,7 +43,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 fade-up">
 						 <div class="inner">
-                <div id="Curiosity">
+                <div id="curiosity">
                   <p>Press the button to load Curiosity information</p>
                   <input type="submit" value="Load" id="btnCuriosity">
 								</div>
@@ -55,7 +54,7 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style2 fade-up">
 					  <div class="inner">
-              <div id="Opportunity">
+              <div id="opportunity">
                     <p>Press the button to load Opportunity information</p>
                     <input type="submit" value="Load" id="btnOpportunity">
               </div>
@@ -65,7 +64,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style2 fade-up">
 	   			  <div class="inner">
-              <div id="Spirit">
+              <div id="spirit">
                     <p>Press the button to load Opportunity information</p>
                   <input type="submit" value="Load" id="btnSpirit">
               </div>
@@ -84,6 +83,7 @@
 			</footer>
 
 		<!-- Scripts -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/immutable/3.8.2/immutable.min.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
